test_files/s_cproc/include/test_006/e_expect.output
/home/jason/github/stupid_lib/test_files/s_cproc/include/test_006/i.input:1:9: error: empty filename in #include
 #include<>
         ^
